# Aufgabe_9_SE

./: Date.cpp  Date.h  Empfaenger.cpp  Empfaenger.h  Main.cpp  Nachricht.h  Nachrichtendienst.cpp  Nachrichtendienst.h  README.adoc  README.md  Sender.cpp  Sender.h  gitignore  meson.build
