project('Nachrichtendienst', 'cpp',
  version : '0.1',
  default_options : ['warning_level=3', 'cpp_std=c++14'])

executable('Nachrichtendienst', 
            'Main.cpp',
           'Empfaenger.cpp',
           'Sender.cpp',
           'Nachrichtendienst.cpp',
           'Date.cpp',
           install : true)
